--- a/estilo.css
+++ b/estilo.css
@@ -1,26 +1,3 @@
-body{
-    background-color: white;
-    background: white;
-    
-}
-
-
-nav.navbar-transparente{
-    padding: 15px 0px;
-    background: rgba(0,0,0,1)
-}
-
-#cont{
-    background-color: #D3D3D3;
-}
-
-#logo{
-    font-size:23px;
-    font-family: 'Merriweather', serif;
-    color:forestgreen;
-    
-}
-
 * {
   box-sizing: border-box;
          margin: 0;
@@ -41,6 +18,7 @@ html, body {
 }
 .content {
   height: 200%;
+  padding-left: 15px;
   transform-origin: top left;
   transition: transform 0.7s cubic-bezier(1, 0.005, 0.24, 1);
   background-color: #f0f0f0;
@@ -192,3 +170,7 @@ body {
             border-radius: 50px;
         }
 
+@media(max-width: 600px){
+
+
+}
