--- a/estilo.css
+++ b/estilo.css
@@ -1,36 +1,38 @@
 * {
-  box-sizing: border-box;
+         box-sizing: border-box;
          margin: 0;
          padding: 0;
+
 }
 html, body {
   height: 100%;
-  overflow: hidden;
-    font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 .cor_para{
   border: 1px solid #f94646;
 }
 
 .page {
+
   height: 100%;
   background-color: #584e4a;
 }
 .content {
+
   height: 200%;
   padding-left: 10vh;
   transform-origin: top left;
   transition: transform 0.7s cubic-bezier(1, 0.005, 0.24, 1);
-  background-color: #f0f0f0;
+  background-color: white;
 }
 .content_inner {
   height: 50%;
-  overflow-y: auto;
   padding: 50px 20%;
 }
 
 /* basically all styling from now on */
 .menu_toggle {
+
   z-index: 900;
   position: fixed;
   top: 0;
@@ -49,7 +51,7 @@ html, body {
   color: #f0f0f0;
 }
 .menu_toggle .menu_open, .menu_toggle .menu_close {
-  position: absolute;
+  position: absolute; 
   top: 50%;
   left: 50%;
   margin-top: -15px;
@@ -83,9 +85,7 @@ html, body {
 .menu_items li:nth-child(3) {
   margin-left: 80px;
 }
-.menu_items li:nth-child(4){
-  margin-left: 120px;
-}
+
 
 .menu_items a {
   display: block;
