--- a/estilo.css
+++ b/estilo.css
@@ -25,7 +25,7 @@ html, body {
 }
 .content_inner {
   height: 50%;
-  padding: 50px 20%;
+  padding: 50px ;
 }
 
 
@@ -168,14 +168,16 @@ body {
             color: white;
             border-radius: 50px;
         }
-
+/*Título animado*/
 .titulo{
   font-style: 'Especial Elite', sans-serif;
-  font-size: max(20px, 6vw); 
+  font-weight: 400;
+  font-size: max(20px, 7vw); 
   border-right: 2px solid black; 
   white-space: nowrap;
   overflow: hidden;
   text-align: center;
+
 
 
 }
@@ -185,7 +187,7 @@ body {
     width: 0;
   }
   to{
-    width: 9em;
+    width: 10em;
   }
 }
 
@@ -205,10 +207,14 @@ body {
   titulo_emsi 6s steps(40) 0.5s normal both; 
 }
 
-#tit{
+.tit{
   margin-top: 5vh;
   margin-left: -2vh;
 
+}
+
+p.titulo.animation{
+  position: center;
 }
 
 .subtitu{
@@ -216,18 +222,37 @@ body {
   -webkit-border-radius: 10px 10px 30px 10px; /* Para versões antigas do Safari*/
   -moz-border-radius: 10px 10px 30px 10px; /* Para versões antigas do Chrome*/
   border-radius: 10px 10px 30px 10px;
-  size: min(70px, 5vw);
+  size: min(70px, 6vw);
+  padding-left: 1vh;
 }
 
 .espaco{
   font-size: min(70px, 5vw);
+  text-align: center;
+}
+.espaco2{
+  margin-top: 2vh;
+  font-size: min(70px, 6vw);
+  text-align: center;
 }
 
-@media(max-width: 770px){
+.texto{
+  text-align: left;
+  font-size:  2vh;
+
+}
+
+@media(max-width: 800px){
  ul.menu_items{
   position: absolute;
   margin-bottom: 30vh;
+  margin-right: 30px;
+
  }
+  .menu_items li{
+  height: 5vw;
+  }
+
 
  .menu_toggle {
 
@@ -242,4 +267,11 @@ body {
   background-color: #f37272;
   border-bottom-right-radius: 100%;
 }
+
+.tit{
+  margin-top: 1vh;
+  margin-left: -2vh;
+
+}
+
 }
