--- a/estilo.css
+++ b/estilo.css
@@ -247,6 +247,7 @@ p.titulo.animation{
   position: absolute;
   margin-bottom: 30vh;
   margin-right: 30px;
+  height: 5vh;
 
  }
   .menu_items li{
