--- a/estilo.css
+++ b/estilo.css
@@ -263,8 +263,10 @@ p.titulo.animation{
 
 .texto{
 
-  font-size:  min(19px, 2.5vh);
-  color: black;
+  font-size: 1.5rem;
+  line-height: 2.5rem;
+  font-weight: 300;
+
 
 }
 
