--- a/estilo.css
+++ b/estilo.css
@@ -261,13 +261,8 @@ p.titulo.animation{
   margin-left: 3vh;
 }
 
-.texto{
-
-  font-size: 1.5rem;
-  line-height: 2.5rem;
-  font-weight: 300;
-
-
+p{
+   font-size:  19px;
 }
 
 .padron{
@@ -277,6 +272,41 @@ p.titulo.animation{
 
 #menuland{
   display: none;
+}
+
+/* Smaller than standard 960 (devices and browsers) */
+@media only screen and (max-width: 959px) {
+    p{
+        font-size: 1rem;
+    }
+}
+
+/* Tablet Portrait size to standard 960 (devices and browsers) */
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+    p{
+        font-size: 1.2rem;
+    }
+}
+
+/* All Mobile Sizes (devices and browser) */
+@media only screen and (max-width: 767px) {
+    p{
+        font-size: 1.1rem;
+    }
+}
+
+/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+    p{
+        font-size: 1.1rem;
+    }
+}
+
+/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
+@media only screen and (max-width: 479px) {
+    p{
+        font-size: 1rem;
+    }
 }
 
 @media (orientation: landscape) {
